--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="https://www.instagram.com/lenverens/profilecard/?igsh=ODh6cW84cWkxaXA4" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.tiktok.com/@renvelope?_t=ZS-8sl278YnDQm&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
                     <a href="https://open.spotify.com/user/31gbo4mmjclrxqtltoo6y3yeplcq?si=P3EouRwhQtGiPqXMR8f02w&nd=1&dlsi=0d9b42b5d69d40cc" target="_blank"><i class="fab fa-spotify"></i></a>
-                    <a href="https://www.dimensional.me/app?recommenderUid=7rV5GZzDZddg9lo0LAqlLJPLLQD3&from=web&view=recommendation_link&ct=null" target="_blank"><i class="fas fa-cube"></i></a>
+                    <a href="https://www.dimensional.me/dr%C3%A8n" target="_blank"><i class="fas fa-cube"></i></a>
                 </div>
             </div>
         </div>
@@ -561,7 +561,7 @@
             <a href="https://www.instagram.com/lenverens/profilecard/?igsh=ODh6cW84cWkxaXA4" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@renvelope?_t=ZS-8sl278YnDQm&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
             <a href="https://open.spotify.com/user/31gbo4mmjclrxqtltoo6y3yeplcq?si=P3EouRwhQtGiPqXMR8f02w&nd=1&dlsi=0d9b42b5d69d40cc" target="_blank"><i class="fab fa-spotify"></i></a>
-            <a href="https://www.dimensional.me/app?recommenderUid=7rV5GZzDZddg9lo0LAqlLJPLLQD3&from=web&view=recommendation_link&ct=null" target="_blank"><i class="fas fa-cube"></i></a>
+            <a href="https://www.dimensional.me/dr%C3%A8n" target="_blank"><i class="fas fa-cube"></i></a>
         </div>
         <p class="footer-text">&copy; 2025 REN. All Rights Reserved.</p>
     </footer>
